--- a/public/css/Component/CenterManager/CenterManager_Waste_Management.css
+++ b/public/css/Component/CenterManager/CenterManager_Waste_Management.css
@@ -57,7 +57,7 @@
         align-items: center;
         justify-content: center;
         width: 35%;
-        position: relative;        visibility: hidden;
+        position: relative;       
 
     }
 
