--- a/public/css/Component/Customer/Customer_Analatics.css
+++ b/public/css/Component/Customer/Customer_Analatics.css
@@ -81,7 +81,7 @@
             .top-bar-left p {
                 margin-top: 2px;
                 font-size: 15px !important;
-                width: 200px;
+                width: 250px;
             }
 
             .date-box {
@@ -89,7 +89,7 @@
                 justify-content: flex-end;
                 margin-right: 1%;
                 margin-top: -18px;
-                margin-left: 45%;
+                margin-left: 42%;
             }
 
             .date-box-cont {
@@ -141,7 +141,7 @@
             transition: background-color 0.3s ease;
             letter-spacing: 0.03rem;
             margin-bottom: 15px;
-            margin-right: 15px;
+            margin-right: 25px;
 
         }
 
@@ -364,7 +364,11 @@
             .bottom {
                 display: flex;
                 align-items: center;
+                justify-content: center;
+                flex-direction: column;
             }
+
+
 
         }
 
