admin center garbage stock

--- a/public/css/Component/Admin/Admin_Center_Main.css
+++ b/public/css/Component/Admin/Admin_Center_Main.css
@@ -38,6 +38,7 @@
     justify-content: center;
     width: 35%;
     position: relative;
+    visibility: hidden;
   }
 
   .main-right-top-search i {
