--- a/public/css/Component/Collector/Collector_Analatics.css
+++ b/public/css/Component/Collector/Collector_Analatics.css
@@ -280,6 +280,9 @@
                     border: 1px solid #ccc;
                     border-radius: 4px;
                     box-sizing: border-box;
+                    background-color: var(--background-color-main);
+                    color: var(--main-text-color);
+
 
                 }
 
@@ -319,7 +322,8 @@
                     border: 1px solid #ccc;
                     border-radius: 4px;
                     box-sizing: border-box;
-                    background-color: #fff
+                    background-color: var(--background-color-main);
+                    color: var(--main-text-color);
                 }
 
                 select:hover {
