--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -81,6 +81,7 @@
     }
 
     .table-header {
+        background-color: var(--table-header);
         grid-template-columns: 13% 14% 14% 11% 14% 14% 20%;
     }
 
