--- a/public/css/Component/Collector/Collector_Request_Completed.css
+++ b/public/css/Component/Collector/Collector_Request_Completed.css
@@ -29,6 +29,7 @@
   }
 
   .table-header {
+    background-color: var(--table-header);
     grid-template-columns: 13% 14% 14% 21% 19% 19% 13%;
   }
 
