--- a/public/css/Component/Admin/Admin_Center_Manager_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Manager_Add.css
@@ -12,18 +12,20 @@
 
     .main-bottom-down-content {
         width: 60%;
-        height: 480px;
+        height: 420px;
         box-shadow: var(--box-shadow);
         background-color: var(--background-color-main);
         border-radius: 10px;
         padding: 30px 30px;
         display: grid;
-        grid-template-rows: 9% 91%;
+        grid-template-rows: 12% 88%;
+
     }
 
     .main-bottom-down-content-top {
         display: flex;
         align-items: center;
+        margin-bottom: 50px;
     }
 
     .main-bottom-down-content-top-content {
@@ -49,9 +51,8 @@
     }
 
     .main-bottom-down-content-bottom-one {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        margin-bottom: 8px;
+        display: flex;
+        align-items: end;
     }
 
     .a {
@@ -108,6 +109,13 @@
     .main-bottom-down-content-bottom-one-right {
         display: flex;
         align-items: center;
+        width: 100%;
+    }
+
+    .main-bottom-down-content-bottom-one-name {
+        display: flex;
+        align-items: center;
+        width: 100%;
     }
 
     .form-fields {
@@ -120,6 +128,19 @@
         margin-bottom: 5px;
         font-size: 14px;
         margin-bottom: 7px;
+    }
+
+    .name input {
+        height: 33px;
+        width: 93% !important;
+        outline: none;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 15px;
+        font-size: 14px;
+        border-bottom-width: 2px;
+        transition: all 0.3s ease;
+        margin-bottom: 5px;
     }
 
     .form-fields input {
@@ -155,6 +176,7 @@
 
     .main-bottom-down-content-bottom-content-three {
         display: grid;
+        width: 98%;
         grid-template-columns: 33% 34% 33%;
     }
 
@@ -279,6 +301,19 @@
         .main-bottom-down-content-bottom-content-three {
             display: flex;
             flex-direction: column;
+        }
+
+        .name input {
+            height: 33px;
+            width: 85% !important;
+            outline: none;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            padding-left: 15px;
+            font-size: 14px;
+            border-bottom-width: 2px;
+            transition: all 0.3s ease;
+            margin-bottom: 5px;
         }
     }
 }
