--- a/public/css/Component/Admin/Admin_Discount_Agent.css
+++ b/public/css/Component/Admin/Admin_Discount_Agent.css
@@ -151,106 +151,6 @@
         height: 3px;
     }
 
-    /*Delete confirm popup*/
-    .delete_confirm {
-        display: flex;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) scale(0);
-        z-index: 4;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: hidden;
-        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
-        box-shadow: var(--box-shadow);
-        border-radius: 10px;
-        background-color: var(--main-text-color);
-    }
-
-    .delete_confirm.active {
-        transform: translate(-50%, -50%) scale(1);
-    }
-
-
-    .delete_confirm .popup {
-        width: 400px;
-        background: white;
-        border-radius: 6px;
-        top: 0;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: var(--main-text-color);
-        transition: transform 0.4s, top 0.4s;
-    }
-
-    .delete_confirm .popup a {
-        width: auto;
-    }
-
-    .delete_confirm .open-popup {
-        visibility: visible;
-        top: 50%;
-    }
-
-    .delete_confirm .popup img {
-        width: 100px;
-        margin-top: 35px;
-        border-radius: 50%;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .delete_confirm .popup h2 {
-        font-size: 23px;
-        font-weight: 600;
-        margin: 10px 0 10px;
-    }
-
-    .delete_confirm .btns {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .delete_confirm .deletebtn {
-        width: 150px;
-        margin-top: 30px;
-        margin-right: 20px;
-        padding: 10px 0;
-        background: rgb(220, 39, 39);
-        color: white;
-        border: 0;
-        outline: none;
-        font-size: 18px;
-        border-radius: 4px;
-        cursor: pointer;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .delete_confirm .deletebtn:hover {
-        background: #c62323;
-        ;
-    }
-
-    .delete_confirm .cancelbtn {
-        width: 150px;
-        margin-top: 30px;
-        padding: 10px 0;
-        background: #bab3b3;
-        color: white;
-        border: 0;
-        outline: none;
-        font-size: 18px;
-        border-radius: 4px;
-        cursor: pointer;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .delete_confirm .cancelbtn:hover {
-        background: #a7a1a1;
-    }
 
     /*Success popup*/
     .center_manager_success {
@@ -267,68 +167,6 @@
         width: 100%;
         height: 100%;
     }
-
-    .btn {
-        padding: 10px 60px;
-        background: white;
-        border: 0;
-        outline: none;
-        cursor: pointer;
-        font-size: 22px;
-        font-weight: 500;
-        border-radius: 30px;
-    }
-
-    .popup {
-        width: 400px;
-        background: white;
-        font-family: 'poppins', sans-serif;
-        border-radius: 6px;
-        text-align: center;
-        padding: 0 30px 30px;
-        color: var(--main-text-color);
-        transition: transform 0.4s, top 0.4s;
-    }
-
-    .open-popup {
-        visibility: visible;
-        top: 50%;
-        transform: translate(-50%, -50%) scale(1);
-    }
-
-    .popup img {
-        width: 100px;
-        margin-top: 35px;
-        border-radius: 50%;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .popup h2 {
-        font-size: 38px;
-        font-weight: 500;
-        margin: 10px 0 10px;
-    }
-
-    .popup button {
-        width: 100%;
-        margin-top: 30px;
-        padding: 10px 0;
-        background: var(--green-color-one);
-        color: white;
-        border: 0;
-        outline: none;
-        font-size: 18px;
-        border-radius: 4px;
-        cursor: pointer;
-        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-
-    }
-
-    .popup button:hover {
-        background: var(--button-hover-green);
-    }
-
-
 
     /*Update popup*/
     .update_click {
@@ -542,6 +380,192 @@
         background: var(--button-hover-green);
     }
 
+    /*Cancel confirm popup*/
+    .delete_confirm2 {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        background-color: #bab3b3;
+    }
+
+    .delete_confirm2.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .delete_confirm2 {
+
+        .popup {
+            width: 400px;
+            background: white;
+            border-radius: 10px;
+            top: 0;
+            text-align: center;
+            padding: 0 30px 30px;
+            color: #333;
+            box-shadow: var(--box-shadow);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .popup a {
+            width: auto;
+        }
+
+        .open-popup {
+            visibility: visible;
+            top: 50%;
+        }
+
+        .popup img {
+            width: 100px;
+            margin-top: 35px;
+            border-radius: 50%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .popup h2 {
+            font-size: 23px;
+            font-weight: 600;
+            margin: 10px 0 10px;
+        }
+
+        .btns {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .deletebtn {
+            width: 150px;
+            margin-top: 30px;
+            margin-right: 20px;
+            padding: 10px 0;
+            background: rgb(220, 39, 39);
+            color: white;
+            border: 0;
+            outline: none;
+            font-size: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .cancelbtn {
+            width: 150px;
+            margin-top: 30px;
+            padding: 10px 0;
+            background: #bab3b3;
+            color: white;
+            border: 0;
+            outline: none;
+            font-size: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        }
+    }
+
+    /*Cancel confirm popup*/
+    .delete_confirm2 {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
+
+    .delete_confirm2.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .delete_confirm2 {
+
+        .popup {
+            width: 400px;
+            background: white;
+            border-radius: 10px;
+            top: 0;
+            text-align: center;
+            padding: 0 30px 30px;
+            color: #333;
+            box-shadow: var(--box-shadow);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .popup a {
+            width: auto;
+        }
+
+        .open-popup {
+            visibility: visible;
+            top: 50%;
+        }
+
+        .popup img {
+            width: 100px;
+            margin-top: 35px;
+            border-radius: 50%;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .popup h2 {
+            font-size: 23px;
+            font-weight: 600;
+            margin: 10px 0 10px;
+        }
+
+        .btns {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .deletebtn {
+            width: 150px;
+            margin-top: 30px;
+            margin-right: 20px;
+            padding: 10px 0;
+            background: rgb(220, 39, 39);
+            color: white;
+            border: 0;
+            outline: none;
+            font-size: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .cancelbtn {
+            width: 150px;
+            margin-top: 30px;
+            padding: 10px 0;
+            background: #bab3b3;
+            color: white;
+            border: 0;
+            outline: none;
+            font-size: 18px;
+            border-radius: 4px;
+            cursor: pointer;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        }
+    }
 
 
     @media screen and(max-width: 917px) {
