--- a/public/css/Component/Admin/Admin_Discount_Agent_Add.css
+++ b/public/css/Component/Admin/Admin_Discount_Agent_Add.css
@@ -17,7 +17,7 @@
         border-radius: 10px;
         padding: 30px;
         display: grid;
-        grid-template-rows: 9% 91%;
+        grid-template-rows: 13% 87%;
         background-color: var(--background-color-main);
 
     }
@@ -35,6 +35,7 @@
     .main-bottom-down-content-top-content h3 {
         font-size: 18px;
         font-weight: 500;
+        margin-left: 15px;
     }
 
     .registration-line {
@@ -42,17 +43,27 @@
         width: 60px;
         background: var(--green-color-one);
         margin-top: 4px;
+        margin-left: 15px;
+
     }
 
     .main-bottom-down-content-bottom {
         display: flex;
         flex-direction: column;
+        padding-top: 17px;
     }
 
     .main-bottom-down-content-bottom-one {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        margin-bottom: 8px;
+        display: flex;
+        align-items: end;
+    }
+
+    .name {
+        width: 93% !important;
+    }
+
+    .name input {
+        width: 100% !important;
     }
 
     .a {
@@ -156,6 +167,7 @@
 
     .main-bottom-down-content-bottom-content-three {
         display: grid;
+        width: 97%;
         grid-template-columns: 33% 34% 33%;
     }
 
