--- a/public/css/Component/Collector/Collector_Analatics.css
+++ b/public/css/Component/Collector/Collector_Analatics.css
@@ -559,7 +559,7 @@
 
                 /* Style for table headers */
                 th {
-                    background-color: #f2f2f2;
+                    background-color: var(--calander-hover-color);
                     padding: 12px;
                     text-align: left;
                 }
@@ -571,7 +571,7 @@
                 }
 
                 tr:nth-child(even) {
-                    background-color: #f9f9f9;
+                    background-color: var(--report-table-color);
                 }
             }
 
