--- a/public/css/Component/Collector/Collector_Complains.css
+++ b/public/css/Component/Collector/Collector_Complains.css
@@ -290,16 +290,19 @@
         justify-content: center;
 
     }
-
+    .complain_success p{
+        color: var(--main-text-color);
+    }
     .popup {
         width: 400px;
-        background: white;
+        background: var(--background-color-main);
         font-family: 'poppins', sans-serif;
         border-radius: 6px;
         text-align: center;
         padding: 0 30px 30px;
         color: #333;
         transition: transform 0.4s, top 0.4s;
+        box-shadow: var(--box-shadow);
     }
 
     .open-popup {
@@ -320,6 +323,7 @@
         font-size: 38px;
         font-weight: 500;
         margin: 10px 0 10px;
+        color: var(--main-text-color);
     }
 
     .popup button {
@@ -327,7 +331,7 @@
         margin-top: 30px;
         padding: 10px 0;
         background: var(--green-color-one);
-        color: white;
+        color: var(--background-color-main);
         border: 0;
         outline: none;
         font-size: 15px;
@@ -339,7 +343,30 @@
 
     @media screen and (max-width: 1142px) {
     
+        .main-bottom-right {
+            display: none;
+        }
 
+        .main-bottom {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .main-bottom-left-component h2 {
+            font-size: 20px;
+        }
+
+        .main-bottom-left-component button {
+            width: 180px;
+            height: 45px;
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+
+        .main-bottom-left {
+            width: 60%;
+        }
 
   
     }
@@ -382,6 +409,10 @@
         .main-bottom-component {
             height: 90%;
         }
+
+        .popup {
+            width: 300px;
+        }
     }
 
     @media screen and (max-width: 540px) {
@@ -409,6 +440,10 @@
         .main-bottom-component-left-topic h2 {
             font-size: 15px;
 
+        }
+
+        .popup {
+            width: 300px;
         }
     }
 
