--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -537,6 +537,7 @@
       font-size: 14px;
       padding-left: 45px;
       transition: all 0.3s ease;
+      color: var(--main-text-color);
     }
 
     .main-right-bottom-content-content input:focus {
@@ -659,7 +660,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--background-color-main);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -671,11 +672,12 @@
   .pop_up_confirm_collect_cont {
     width: 530px;
     height: 600px;
-    background-color: white;
+    background-color: var(--background-color-main);
     border-radius: 10px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    box-shadow: var(--box-shadow);
 
   }
 
@@ -759,7 +761,7 @@
     height: 40px;
     outline: none;
     width: 180px;
-    color: white;
+    color: var(--background-color-right);
     font-size: 17px;
     font-weight: 500;
     border-radius: 5px;
