--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
 @import url('Component/Login.css');
 @import url('Component/Register.css');
 @import url('Component/ResetPassword.css');
+@import url('Component/ConfirmPassword.css');
 
 @import url('Component/Announcement_view.css');
 
