--- a/public/css/Component/Admin/Admin_Center_Manager_View.css
+++ b/public/css/Component/Admin/Admin_Center_Manager_View.css
@@ -44,7 +44,7 @@
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
-        height: 450px;
+        height: 500px !important;
         overflow: scroll;
     }
 
