--- a/public/css/Component/Login.css
+++ b/public/css/Component/Login.css
@@ -790,7 +790,6 @@
     height: 28px;
   }
 
-
   .overlay {
     position: fixed;
     top: 0;
@@ -800,7 +799,66 @@
     background: rgba(0, 0, 0, 0.4);
     z-index: 98;
     display: none;
+  }
 
+  /*Success popup*/
+  .complain_success {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: 15;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .popup {
+    width: 400px;
+    background: white;
+    font-family: 'poppins', sans-serif;
+    border-radius: 6px;
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    transition: transform 0.4s, top 0.4s;
+  }
+
+  .open-popup {
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  .popup img {
+    width: 100px;
+    height: 100px;
+    margin-top: 35px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .popup h2 {
+    font-size: 38px;
+    font-weight: 500;
+    margin: 10px 0 10px;
+  }
+
+  .popup button {
+    width: 100%;
+    margin-top: 30px;
+    padding: 10px 0;
+    background: var(--green-color-one);
+    color: white;
+    border: 0;
+    outline: none;
+    font-size: 15px;
+    border-radius: 6px;
+    cursor: pointer;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   }
 
   @media (max-width:1506px) {
