--- a/public/css/Component/Admin/Admin_Admin_View.css
+++ b/public/css/Component/Admin/Admin_Admin_View.css
@@ -25,13 +25,13 @@
     }
 
     .table-header {
-        grid-template-columns: 15% 10% 25% 25% 12.5% 12.5%
+        grid-template-columns: 15%  30% 30% 12.5% 12.5%
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns: 15% 10% 25% 25% 12.5% 12.5%
+        grid-template-columns: 15%  30% 30% 12.5% 12.5%
     }
 
     .table td {
