--- a/public/css/Component/ResetPassword.css
+++ b/public/css/Component/ResetPassword.css
@@ -3,23 +3,23 @@
   .ResetPassword-main {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; 
+    justify-content: flex-start;
     align-items: center;
-    padding-top: 60px; 
+    padding-top: 60px;
     position: relative;
   }
-  
+
 
   * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
   }
-  
+
   a {
     color: #13601b;
   }
-  
+
   body,
   input {
     font-family: 'Poppins', sans-serif;
@@ -27,15 +27,15 @@
 
 
 
-.image {
+  .image {
     position: absolute;
     width: 40%;
     z-index: 9;
-    margin-top: 250px; 
+    margin-top: 250px;
     margin-left: 250px;
-}
+  }
 
-  
+
   .container {
     position: relative;
     width: 100%;
@@ -44,7 +44,7 @@
     overflow: hidden;
     z-index: 2;
   }
-  
+
   .container:before {
     content: '';
     position: absolute;
@@ -57,9 +57,9 @@
     z-index: 6;
     transform: translateY(-50%);
     transition: 1.8s ease-in;
-  
+
   }
-  
+
   .forms-container {
     position: absolute;
     width: 100%;
@@ -67,7 +67,7 @@
     top: 0;
     left: 0;
   }
-  
+
   .signin-signup {
     position: absolute;
     top: 50%;
@@ -78,9 +78,9 @@
     grid-template-columns: 1fr;
     z-index: 5;
     transition: 1s 0.7s ease-in-out;
-  
+
   }
-  
+
   form {
     display: flex;
     align-items: center;
@@ -91,15 +91,15 @@
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     transition: 0.2s 0.7s ease-in-out;
-  
+
   }
-  
+
   form.sign-in-form {
     z-index: 2;
   }
-  
-  
-  
+
+
+
   .input-field-container {
     display: flex;
     align-items: left;
@@ -109,52 +109,53 @@
   }
 
 
- 
 
-.input-fieldlog {
-  width: 350px;
-  height: 40px;
-  background-color: #f5f6fa;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  display: grid;
-  display: flex; 
-  align-items: center;
-  grid-template-columns: 10% 90%;
-  padding: 0 .9rem;
-  border: 1px solid #b8b7b7;
-  align-items: center;
-  margin-top: 10px;
 
-}
+  .input-fieldlog {
+    width: 350px;
+    height: 40px;
+    background-color: #f5f6fa;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    display: grid;
+    display: flex;
+    align-items: center;
+    grid-template-columns: 10% 90%;
+    padding: 0 .9rem;
+    border: 1px solid #b8b7b7;
+    align-items: center;
+    margin-top: 10px;
 
-.input-fieldlog i {
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  font-size: 1.1rem;
-  margin-right: 20px;
+  }
 
-}
+  .input-fieldlog i {
+    text-align: center;
+    line-height: 55px;
+    color: #acacac;
+    font-size: 1.1rem;
+    margin-right: 20px;
 
-.input-fieldlog input {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 200;
-  font-size: 1rem;
-  color: #333;
-  margin-bottom: 2px;
+  }
 
-}
+  .input-fieldlog input {
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 200;
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 2px;
 
-.input-fieldlog input::placeholder {
-  color: #8d8d8d;
-  font-weight: 500;
-  padding-left: 20px;
-  align-self: center;
-}
+  }
+
+  .input-fieldlog input::placeholder {
+    color: #8d8d8d;
+    font-weight: 500;
+    padding-left: 20px;
+    align-self: center;
+  }
+
   .btn {
     width: 200px;
     height: 40px;
@@ -169,52 +170,123 @@
     margin: 10px 0;
     transition: .5s;
   }
-  
+
   .btn:hover {
     background-color: #34cc78;
-  }  
-  
-  
-form.sign-up-form {
-  z-index: 1;
-  opacity: 0;
+  }
+
+
+  form.sign-up-form {
+    z-index: 1;
+    opacity: 0;
+  }
+
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 4px;
+
+
+
+  }
+
+  .top img {
+    width: 100px;
+    height: 100px;
+    cursor: pointer;
+  }
+
+  .top h2 {
+    margin-right: 10px;
+    margin-top: 20px;
+  }
+
+  .slogan {
+    font-size: 13px;
+    margin-bottom: 10px;
+  }
+
+  .line {
+    width: 100px;
+    height: 5px;
+    margin-bottom: 35px;
+    background: var(--green-color-one);
+
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 98;
+    display: none;
+  }
+
+  /*Success popup*/
+  .complain_success {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: 152;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .popup {
+    width: 400px;
+    background: white;
+    font-family: 'poppins', sans-serif;
+    border-radius: 6px;
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    transition: transform 0.4s, top 0.4s;
+  }
+
+  .open-popup {
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  .popup img {
+    width: 100px;
+    height: 100px;
+    margin-top: 35px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .popup h2 {
+    font-size: 38px;
+    font-weight: 500;
+    margin: 10px 0 10px;
+  }
+
+  .popup button {
+    width: 100%;
+    margin-top: 30px;
+    padding: 10px 0;
+    background: var(--green-color-one);
+    color: white;
+    border: 0;
+    outline: none;
+    font-size: 15px;
+    border-radius: 6px;
+    cursor: pointer;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  }
+
+
+
 }
-
-.top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-bottom: 4px;
-  
-
-
-}
-
-.top img {
-  width: 100px;
-  height: 100px;
-  cursor: pointer;
-}
-
-.top h2 {
-  margin-right: 10px;
-  margin-top: 20px;
-}
-
-.slogan {
-  font-size: 13px;
-  margin-bottom: 10px;
-}
-
-.line {
-  width: 100px;
-  height: 5px;
-  margin-bottom: 35px;
-  background: var(--green-color-one);
-  
-}
-
-  
-}
-
