--- a/public/css/Component/ResetPassword.css
+++ b/public/css/Component/ResetPassword.css
@@ -287,6 +287,251 @@
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   }
 
+  @media (max-width:870px) {
+    .container {
+
+      min-height: 1150px !important;
+    }
+
+    .container {
+      min-height: 800px;
+      height: 100vh;
+    }
+
+    .container:before {
+      width: 1500px;
+      height: 1500px;
+      left: 30%;
+      bottom: 68%;
+      transform: translateX(-50%);
+      right: initial;
+      top: initial;
+      transition: 2s ease-in-out;
+    }
+
+    .signin-signup {
+      width: 100%;
+      left: 50%;
+      top: 95%;
+      transform: translate(-50%, -100%);
+      transition: 1s 0.8s ease-in-out;
+    }
+
+    .panels-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 2fr 1fr;
+    }
+
+    .panel .content {
+      padding-right: 15%;
+
+      transition: 0.9s 0.8s ease-in-out;
+    }
+
+    .panel h3 {
+      font-size: 1.2rem;
+    }
+
+    .panel p {
+      font-size: 0.7rem;
+      padding: 0.5rem 0;
+    }
+
+    .btn.transparent {
+      width: 110px;
+      height: 35px;
+      font-size: 0.7rem;
+    }
+
+    .right-panel .content,
+    .right-panel .image {
+      transform: translateY(300px);
+    }
+
+
+    .panel {
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      padding: 2.5rem 8%;
+    }
+
+    .image {
+      width: 200px;
+    }
+
+    .left-panel {
+      grid-row: 1/2;
+    }
+
+    .right-panel {
+      grid-row: 3/4;
+    }
+
+
+
+    .container.sign-up-mode:before {
+      transform: translate(-50%, 100%);
+      bottom: 32%;
+      right: initial;
+    }
+
+    .image {
+      width: 200px;
+      transition: 0.9s 0.6s ease-in-out;
+    }
+
+    .container.container.sign-up-mode .left-panel .image,
+    .container.container.sign-up-mode .left-panel .content,
+    .container.container.sign-up-mode .left-panel .p {
+      transform: translateY(-300px);
+    }
+
+    .container.sign-up-mode .signin-signup {
+      top: 5%;
+      transform: translate(-50%, 0);
+      left: 50%;
+    }
+
+    .sign-up-form {
+      margin-right: 100px;
+      margin-top: -40px;
+      margin-left: 15%;
+    }
+
+    .btn1 {
+      width: 100%;
+      margin-top: 5px;
+    }
+
+    .top {
+      margin-top: 140px;
+    }
+
+    .top1 img {
+      width: 70px;
+      height: 70px;
+      cursor: pointer;
+    }
+
+    .top1 h1 {
+      margin-right: 30px;
+      font-size: 24px;
+    }
+
+    .edit-profile-content-profile {
+      margin-bottom: 1px;
+      margin-top: 3px;
+    }
+
+    .cont-region {
+      margin-top: 1px;
+      margin-bottom: 1px;
+    }
+
+    .cont p {
+
+      margin-bottom: 1px;
+    }
+
+    .edit-profile-main-image {
+      height: 65px;
+      width: 65px;
+    }
+
+    .edit-profile-second-image {
+      height: 21px;
+      width: 21px;
+      margin-top: -24px;
+      margin-left: 65px;
+      flex: 1;
+      cursor: pointer;
+    }
+
+    .left-panel {
+      .p {
+        margin-right: 15px !important;
+        font-size: 15px !important;
+        width: 100px;
+        color: var(--background-color-main) !important;
+      }
+
+      .p p {
+        font-size: 18px !important;
+        color: var(--background-color-main) !important;
+
+      }
+
+      .p i {
+        font-size: 18px;
+        color: var(--background-color-main) !important;
+
+      }
+    }
+
+    .right-panel {
+      .p {
+        display: none;
+
+      }
+    }
+  }
+
+  @media(max-width:570px) {
+    form {
+      padding: 0 1.5rem;
+    }
+
+    .image {
+      display: none;
+    }
+
+    .panels.content {
+      padding: 0.5rem 1rem
+    }
+
+    .container:before {
+      bottom: 72%;
+      left: 50%;
+    }
+
+    .container.sign-up-mode:before {
+      bottom: 28%;
+      left: 50%;
+    }
+
+    .input-field,
+    .input-field2,
+    .cont-region select.city {
+      width: calc(100% - 20px);
+      /* Adjust the width as needed */
+    }
+
+    .cont span {
+      font-size: 12px !important;
+    }
+  }
+
+  @media(max-width:868px) {
+    .location_pop_content {
+      width: 500px;
+    }
+  }
+
+  @media(max-width:534px) {
+    .location_pop_content {
+      width: 360px;
+    }
+
+    .location_pop p {
+      font-size: 13px;
+    }
+  }
+
+
+
+
+
 
 
 }
