--- a/public/css/Component/CenterManager/CenterManager_Complaints_History.css
+++ b/public/css/Component/CenterManager/CenterManager_Complaints_History.css
@@ -280,6 +280,64 @@
         border-radius: 50%;
     }
 
+       /*Empty table UI*/
+       .main-right-bottom-two {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .main-right-bottom-two-content {
+        width: 55%;
+        height: 95%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+
+    .main-right-bottom-two-content img {
+        width: 450px;
+        height: 450px;
+
+    }
+
+    .main-right-bottom-two-content h1 {
+        font-size: 23px;
+        color: var(--main-text-color);
+        font-weight: 550;
+    }
+
+    .main-right-bottom-two-content p {
+        font-size: 18px;
+        margin-top: 7px;
+        color: var(--main-text-color);
+    }
+
+    .main-right-bottom-two-content button {
+        height: 42px;
+        width: 200px;
+        outline: none;
+        color: white;
+        font-size: 19px;
+        font-weight: 500;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        background: var(--green-color-one);
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        margin-bottom: 20px;
+        margin-top: 20px;
+    }
+
+
+    .main-right-bottom-two-content button:hover {
+        background: var(--button-hover-green);
+    }
+
 
 
     @media screen and (max-width: 1118px) {
