--- a/public/css/Component/Collector/Collector_Complains.css
+++ b/public/css/Component/Collector/Collector_Complains.css
@@ -341,81 +341,15 @@
     }
 
 
-    @media screen and (max-width: 1142px) {
-    
-        .main-bottom-right {
-            display: none;
-        }
 
+
+    @media screen and (max-width: 540px) {
         .main-bottom {
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
         }
-
-        .main-bottom-left-component h2 {
-            font-size: 20px;
-        }
-
-        .main-bottom-left-component button {
-            width: 180px;
-            height: 45px;
-            margin-left: 50px;
-            margin-right: 50px;
-        }
-
-        .main-bottom-left {
-            width: 60%;
-        }
-
-  
-    }
-
-    @media screen and (max-width: 1000px) {
-        .main-right-top-notification {
-            margin-left: 5%;
-        }
-
-        .notification_popup {
-            top: 11%;
-            right: 20%;
-            width: 30%;
-        }
-    }
-
-    @media screen and (max-width: 950px) {
-        .main-bottom-component {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .main-bottom-component-right {
-            display: none;
-        }
-
-        .main-bottom-component-left {
-            width: 100%;
-        }
-    }
-
-    @media screen and (max-width: 750px) {
-        .notification_popup {
-            top: 11%;
-            right: 20%;
-            width: 40%;
-        }
-
-        .main-bottom-component {
-            height: 90%;
-        }
-
-        .popup {
-            width: 300px;
-        }
-    }
-
-    @media screen and (max-width: 540px) {
         .notification_popup {
             top: 11%;
             right: 17%;
