--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,6 +84,7 @@
 @import url('Component/CenterManager/CenterManager_Collector.css');
 @import url('Component/CenterManager/CenterManager_Collector_Add.css');
 @import url('Component/CenterManager/CenterManager_Collector_Complains.css');
+@import url('Component/CenterManager/CenterMananger_Collector_Assistant.css');
 
 @import url('Component/CenterManager/CenterManager_CenterWorker.css');
 @import url('Component/CenterManager/CenterManager_CenterWorker_Add.css');
